--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 /* ------- header ------ */
 
-header {
+.header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
