--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ h2, h3{
 }
 
 .container{
-    background-image: url(img/background.jpeg);
+    background-image: url(../FS_Online_Oct_Entregable_Landing_Page/img/background.jpeg);
     background-size: 100%;
     width: 100%;
     height: 922px;
